# spectre

./: Cargo.toml  README.md  cobertura.xml  docker-compose.yml
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: cli.rs  config.rs  directory.rs  errors.rs  init.rs  lib.rs  main.rs  result.rs  util.rs
cli/src/connection/: mod.rs
cli/src/database/: command.rs  config.rs  drop.rs  fresh.rs  mod.rs  reset.rs  setup.rs
cli/src/driver/: mod.rs
cli/src/init/: command.rs  init_files.rs  mod.rs
cli/src/migrate/: mod.rs
cli/src/seed/: mod.rs
cli/tests/: init.rs  tests.rs
config/: Cargo.toml
config/src/: config.rs  directory.rs  errors.rs  lib.rs  logger.rs  manager.rs  option.rs  parser.rs
connection/: Cargo.toml
connection/src/: connection.rs  datasource.rs  errors.rs  lib.rs  manager.rs  option.rs
connection/src/driver/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
directory/: Cargo.toml
directory/src/: lib.rs
spectre/: Cargo.toml
spectre/src/: lib.rs  spectre.rs
