[package]
name = "spectre_cli"
version = "0.1.0"
authors = ["Quadriphobs1 <abiodunquadriadekunle@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Spectre CLI"
autotests = false

[[test]]
name = "tests"

[[bin]]
name = "spectre"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = "1.0.106"
serde_derive = "1.0.106"
dotenv = "0.15.0"
toml = "0.5.6"

[dev-dependencies]
tempfile = "3.1.0"

[features]
default = ["postgres", "mysql"]
postgres = []
mysql = []