[package]
name = "spectre_cli"
version = "0.1.0"
authors = ["Quadriphobs1 <abiodunquadriadekunle@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Spectre CLI"
default-run = "spectre"

[lib]
name = "cli"
path = "src/lib.rs"

[[test]]
name = "tests"

[[bin]]
name = "spectre"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_yaml = "0.8.11"
dotenv = "0.15.0"
config = { path = "../config", version = "0.1.0" }
directory = { path = "../directory", version = "0.1.0" }
connection = { path = "../connection", version = "0.1.0" }

[dev-dependencies]
tempfile = "3.1.0"
temp_test = "0.1.1"
