[package]
name = "spctre_config"
version = "0.1.0"
authors = ["Quadriphobs1 <abiodunquadriadekunle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.106"
serde_derive = "1.0.106"
toml = "0.5.6"

[dependencies.spectre_connection]
path = "../connection"

[dev-dependencies]
tempfile = "3.1.0"