[package]
name = "config"
version = "0.1.0"
authors = ["Quadriphobs1 <abiodunquadriadekunle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.110"
serde_derive = "1.0.110"
serde_yaml = "0.8.12"
connection = { path = "../connection", version = "0.1.0" }
regex = "1"

[dev-dependencies]
tempfile = "3.1.0"
indoc = "0.3"
unindent = "0.1.5"
