[package]
name = "connection"
version = "0.1.0"
authors = ["Quadriphobs1 <abiodunquadriadekunle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.110"
serde_derive = "1.0.110"
r2d2 = "0.8"

[features]
default = ["postgres", "mysql", "sqlite"]
postgres = []
mysql = []
sqlite = []